Made updates to page structure and status selector

--- a/src/components/Card/Card.style.scss
+++ b/src/components/Card/Card.style.scss
@@ -2,9 +2,32 @@
 
 .Card {
   margin-inline: auto;
+  background-color: var(--c-white);
+  overscroll-behavior: contain;
+
+  &.menu {
+    max-width: calc(100vw - 2rem);
+    max-height: min(calc(100vh - 2rem), 20rem);
+    padding: 0.25rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+    overflow-y: auto;
+
+    @include withBorder($borderColor: var(--c-gray-200));
+  }
+
+  &.container {
+    padding: 1rem;
+
+    @include withoutBorder($borderRadius: 0.75rem);
+  }
 
   @include desktop() {
     box-shadow: 4px 4px 16px var(--c-shadow-200);
-    border-radius: 1rem;
+
+    &.container {
+      padding: 2rem;
+    }
   }
 }
