--- a/src/components/Buttons/CloseButton/CloseButton.style.scss
+++ b/src/components/Buttons/CloseButton/CloseButton.style.scss
@@ -1,6 +1,7 @@
 .CloseButton {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2rem;
+  height: 2rem;
+  background-color: var(--c-gray-100);
   border-radius: 50%;
   display: flex;
   justify-content: center;
