--- a/src/pages/Students/StudentList/StudentList.style.scss
+++ b/src/pages/Students/StudentList/StudentList.style.scss
@@ -1,5 +1,3 @@
-@use "styles/abstracts/mixins" as *;
-
 .StudentList {
   td {
     &.phoneNumber {
@@ -10,8 +8,8 @@
       text-transform: capitalize;
     }
 
-    &.colorCoded {
-      padding: 0.5rem 1rem;
+    &.statusButton {
+      padding: 0 0.5rem;
     }
 
     .note {
@@ -27,7 +25,5 @@
         text-align: center;
       }
     }
-
-    @include colorCoded(studentStatus, subscription);
   }
 }
