--- a/src/components/Table/Table.style.scss
+++ b/src/components/Table/Table.style.scss
@@ -1,21 +1,82 @@
-/* TABLE */
-
 .Table {
-  width: 100%;
-  border-collapse: collapse;
+  margin-inline: unset;
+  flex-grow: 1;
+  max-width: 100%;
+  max-height: 100vh;
+  overflow: auto;
+
+  .wrapper {
+    display: flex;
+  }
+
+  .prefix {
+    position: sticky;
+    z-index: 2;
+
+    &[dir="ltr"] {
+      left: 0;
+    }
+
+    &[dir="rtl"] {
+      right: 0;
+    }
+
+    th,
+    td {
+      padding-inline: 0.5rem;
+
+      &:first-child {
+        padding-inline-start: 1rem;
+      }
+    }
+
+    td {
+      color: var(--c-gray-400);
+    }
+  }
+
+  .data {
+    flex-grow: 1;
+
+    thead {
+      th {
+        &:hover {
+          background-color: var(--c-shadow-200);
+        }
+      }
+    }
+
+    tbody {
+      tr {
+        &:hover {
+          background-color: var(--c-shadow-100);
+        }
+      }
+    }
+  }
+
+  thead {
+    background-color: var(--c-gray-100);
+    border-block-end: 1px solid var(--c-gray-300);
+    position: sticky;
+    top: 0;
+    z-index: 1;
+
+    th {
+      text-align: start;
+      text-transform: capitalize;
+      font-weight: bold;
+    }
+  }
+
+  tr {
+    height: 2.875rem;
+    border-block-end: 1px solid var(--c-gray-200);
+  }
 
   th,
   td {
-    padding: 0.75rem 1rem;
-
-    &.prefix {
-      padding-inline: 0.5rem 0.375rem;
-
-      & + th,
-      & + td {
-        padding-inline-start: 0.375rem;
-      }
-    }
+    padding-inline: 1rem;
 
     &.fit {
       width: 1%;
@@ -27,48 +88,6 @@
       overflow-x: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
-    }
-
-    &:last-child {
-      padding-inline-end: 0.5rem;
-    }
-  }
-
-  thead {
-    tr {
-      border-block-end: 1px solid var(--c-gray-300);
-
-      th {
-        text-align: start;
-        text-transform: capitalize;
-        font-weight: bold;
-
-        &.prefix {
-          &:hover {
-            background-color: inherit;
-          }
-        }
-
-        &:hover {
-          background-color: var(--c-shadow-200);
-        }
-      }
-    }
-  }
-
-  tbody {
-    tr {
-      border-block-end: 1px solid var(--c-gray-200);
-
-      &:hover {
-        background-color: var(--c-shadow-100);
-      }
-
-      td {
-        &.prefix {
-          color: var(--c-gray-400);
-        }
-      }
     }
   }
 }
