--- a/src/pages/Students/StudentList/StudentList.style.scss
+++ b/src/pages/Students/StudentList/StudentList.style.scss
@@ -1,4 +1,36 @@
 .StudentList {
+  height: 100vh;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  tr {
+    &[gender="male"] {
+      background-color: var(--c-male);
+    }
+
+    &[gender="female"] {
+      background-color: var(--c-female);
+    }
+  }
+
+  .loadMore {
+    position: sticky;
+    top: 100%;
+    margin-block: 0.5rem;
+
+    &[dir="rtl"] {
+      right: 50%;
+      transform: translateX(50%);
+    }
+
+    &[dir="ltr"] {
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
   td {
     &.phoneNumber {
       direction: ltr;
@@ -9,7 +41,7 @@
     }
 
     &.statusButton {
-      padding: 0 0.5rem;
+      padding-inline: 0.5rem;
     }
 
     .note {
