Added teacher and course to student table

--- a/src/components/Form/FieldWrapper/FieldWrapper.style.scss
+++ b/src/components/Form/FieldWrapper/FieldWrapper.style.scss
@@ -3,7 +3,7 @@
 .FieldWrapper {
   height: 2.5rem;
   width: 100%;
-  padding: 0.5rem;
+  padding: var(--spacing-m);
   display: flex;
   align-items: center;
 
