--- a/src/components/Form/PhoneNumberInput/PhoneNumberInput.style.scss
+++ b/src/components/Form/PhoneNumberInput/PhoneNumberInput.style.scss
@@ -10,7 +10,7 @@
   }
 
   .SelectionInput {
-    margin-inline: 0.5rem;
+    margin-inline: var(--spacing-m);
 
     & > .FieldWrapper {
       border-block-start: none;
