--- a/src/components/Buttons/Button/Button.style.scss
+++ b/src/components/Buttons/Button/Button.style.scss
@@ -5,7 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  gap: var(--spacing-m);
+  position: relative;
 
   @include buttonVariants();
 }
