--- a/src/components/Container/Container.style.scss
+++ b/src/components/Container/Container.style.scss
@@ -3,19 +3,22 @@
 .Container {
   margin-inline: auto;
   background-color: var(--c-white);
-  overscroll-behavior: contain;
 
   &.menu {
-    max-width: calc(100vw - 2rem);
-    max-height: min(calc(100vh - 2rem), 20rem);
+    max-width: calc(100vw - var(--spacing-l) * 2);
+    max-height: min(calc(100vh - var(--spacing-l) * 2), 20rem);
     overflow-y: auto;
+    overscroll-behavior: contain;
 
     @include menuLayout();
-    @include withBorder($borderColor: var(--c-gray-200));
+    @include withBorder(
+      $borderRadius: 0.375rem,
+      $borderColor: var(--c-gray-200)
+    );
   }
 
   &.card {
-    padding: 1rem;
+    padding: var(--spacing-l);
   }
 
   @include desktop() {
@@ -23,7 +26,7 @@
     box-shadow: 4px 4px 16px var(--c-shadow-200);
 
     &.card {
-      padding: 2rem;
+      padding: var(--spacing-xl);
     }
   }
 }
