--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,4 +1,5 @@
 @use "colors" as *;
+@use "sizes" as *;
 
 :root {
   // COLOR SCHEMA
@@ -15,8 +16,11 @@
   }
 
   // MEASUREMENTS
-  --w-sidebar-closed: 4rem;
-  --w-sidebar-open: 9rem;
-  --h-page-header: 6rem;
-  --menu-spacing: 0.25rem;
+  --closed-sidebar-width: 4rem;
+  --opened-sidebar-width: 9rem;
+  --page-min-height: 40rem;
+
+  @each $size, $value in $spacing {
+    --spacing-#{$size}: #{$value};
+  }
 }
